bre-drools/altlr4/Expr.g4
grammar Expr;

/** The start rule; begin parsing here. */
prog: stat+ ;

stat: expr NEWLINE          # printExpr
    | ID '=' expr NEWLINE   # assign
    | NEWLINE               # blank
    ;

expr: expr op=('*'|'/') expr   # MulDiv
    | expr op=('+'|'-') expr   # AddSub
    | INT                   # int
    | ID                    # id
    | '(' expr ')'          # parents
    ;

ID      :   [a-zA-Z]+ ;
INT     :   [0-9]+ ;
NEWLINE :   '\r'? '\n' ;
WS      :   [ \t]+ -> skip ; // toss out whitespace

MUL     :   '*' ; // assigns token name to '*' used above in grammar
DIV     :   '/' ;
ADD     :   '+' ;
SUB     :   '-' ;
